--- a/src/assets/scss/style-mobile.scss
+++ b/src/assets/scss/style-mobile.scss
@@ -284,12 +284,14 @@ body
         }
     }
 }
-.section-bg .bg-img{
-	width:90%;
-	margin:0 auto;
-	height:200px;
-	background:url('../img/join-banner.jpg') no-repeat center center;
-	background-size:90% 200px;
+.section-bg .bg-img
+{
+    width: 90%;
+    height: 200px;
+    margin: 0 auto;
+
+    background: url('../img/join-banner.jpg') no-repeat center center;
+    background-size: 90% 200px;
 }
 
 .section-join-info
@@ -358,35 +360,157 @@ body
         .pull-right
         {
             width: 80%;
-            h3{
-            	margin-top: 25px;
+            h3
+            {
+                margin-top: 25px;
             }
-            h3,p{
-            	font-size: 14px;
+            h3,
+            p
+            {
+                font-size: 14px;
             }
-            p{
-            	margin-top: 10px;
+            p
+            {
+                margin-top: 10px;
+
                 color: #666;
             }
         }
     }
     .join-contact
     {
-        margin-bottom:20px;
+        margin-bottom: 20px;
         li
         {
-            float: left;
-			height: 130px;
-            width: 49%;
-			margin-top: 20px;
-            border-right: 1px solid #ccc;
             font-size: 12px;
-            &:last-child, &:nth-child(2)
+
+            float: left;
+
+            width: 49%;
+            height: 130px;
+            margin-top: 20px;
+
+            border-right: 1px solid #ccc;
+            &:last-child,
+            &:nth-child(2)
             {
                 border-right: 0;
             }
-            p{
-            	margin-bottom: 10px;
+            p
+            {
+                margin-bottom: 10px;
+            }
+        }
+    }
+    .job-box
+    {
+        margin: 30px 0;
+        .job-box-li
+        {
+            line-height: 50px;
+
+            position: relative;
+            z-index: 5;
+
+            overflow: hidden;
+
+            height: 50px;
+
+            cursor: pointer;
+
+            border-bottom: 1px solid #ccc;
+        }
+        .icon-span,
+        .icon-span2
+        {
+            position: absolute;
+            z-index: 10;
+            top: 15px;
+
+            display: block;
+
+            width: 22px;
+            height: 22px;
+        }
+        .icon-span
+        {
+            left: 10px;
+
+            background: url('../../dist/img/jiantou1.png') no-repeat center center;
+            background-position: -22px 0;
+        }
+        .icon-span2
+        {
+            right: 10px;
+
+            background: url('../../dist/img/jiantou2.png') no-repeat center center;
+            background-position: -22px 0;
+        }
+        .job-name
+        {
+            margin-left: 40px;
+        }
+        .job-num
+        {
+            position: absolute;
+            z-index: 10;
+            right: 40px;
+        }
+        .list-active
+        {
+            color: #fff;
+            border-bottom: 1px solid map-get($colorMaps,blue);
+            background: map-get($colorMaps,blue);
+            .icon-span,
+            .icon-span2
+            {
+                background-position: 0 0;
+            }
+        }
+        .job-explain
+        {
+            overflow: hidden;
+
+            width: 100%;
+            max-height: 0;
+
+            color: #666;
+
+            @include transition(all 1s ease);
+        }
+        .openheight
+        {
+            max-height: 1000px;
+        }
+        .job-explain-require
+        {
+            padding: 15px 10px;
+            span
+            {
+                font-size: 14px;
+
+                display: inline-block;
+
+                width: 49%;
+            }
+        }
+        .job-explain-info
+        {
+            font-size: 14px;
+            line-height: 20px;
+
+            padding: 0 10px;
+
+            border-bottom: 1px solid #ccc;
+            h4
+            {
+                font-size: 16px;
+
+                color: #222;
+            }
+            .text-center
+            {
+                margin: 10px 0;
             }
         }
     }
@@ -405,6 +529,50 @@ body
     height: 100%;
 
     background: transparent;
+}
+.mask-popup
+{
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+
+    display: none;
+
+    width: 100%;
+    height: 100%;
+
+    cursor: pointer;
+
+    opacity: .75;
+    background: #000;
+
+    filter: alpha(opacity=75);
+}
+.popup
+{
+    position: fixed;
+    z-index: 9999999;
+    top: 50%;
+    left: 50%;
+
+    display: none;
+
+    width: 200px;
+    height: 120px;
+    margin: -60px 0 0 -100px;
+
+    border: 1px solid map-get($colorMaps,yellow);
+    background: #fff;
+
+    @include radius(5px);
+    .popup-box
+    {
+        font-size: 16px;
+        p{
+        	margin:10px 0;
+        }
+    }
 }
 /* 侧边栏 */
 .tool-box
@@ -433,8 +601,9 @@ body
 .main-content
 {
     position: relative;
-    height: 100%;
     z-index: 99999;
+
+    height: 100%;
 
     background: #fff;
 
