--- a/src/assets/scss/style-mobile.scss
+++ b/src/assets/scss/style-mobile.scss
@@ -338,7 +338,35 @@ body
             p{
                 margin:20px 0;
                 font-size: .8em;
+                line-height: 16px;
             }
+        }
+    }
+}
+/* 独家保障 */
+.section-ensure
+{
+    span
+    {
+        margin: 0 5px;
+
+        color: map-get($colorMaps,blue);
+    }
+    .ensure-box
+    {
+        margin: 40px 0 20px 0;
+        .pull-left
+        {
+            width: 33.333333%;
+            margin-bottom: 20px;
+        }
+        img
+        {
+            width: 100%;
+        }
+        h4
+        {
+            color: map-get($colorMaps,blue);
         }
     }
 }
