--- a/src/assets/scss/style-mobile.scss
+++ b/src/assets/scss/style-mobile.scss
@@ -258,7 +258,7 @@ body
 /* 金牌讲师 */
 .section-teachers
 {
-    padding: 10px 0 20px 0;
+    padding: 20px 0;
 
     background: #f4f4f4;
     .photo-box
@@ -297,7 +297,7 @@ body
         &:after
         {
             z-index: 2;
-            top: 69px;
+            top: 68px;
 
             width: 320px;
             height: 1px;
@@ -346,15 +346,19 @@ body
 /* 独家保障 */
 .section-ensure
 {
+    padding:20px 0 10px 0;
     span
     {
-        margin: 0 5px;
+        margin:5px;
 
         color: map-get($colorMaps,blue);
+
+        font-size: .8em;
+
     }
     .ensure-box
     {
-        margin: 40px 0 20px 0;
+        margin: 20px 0 10px 0;
         .pull-left
         {
             width: 33.333333%;
@@ -362,12 +366,78 @@ body
         }
         img
         {
-            width: 100%;
+            width: 90%;
         }
         h4
         {
             color: map-get($colorMaps,blue);
+            font-size: .9em;
         }
+    }
+}
+/* 推荐课程 */
+.section-recommend
+{
+    padding: 10px 0 20px 0;
+
+    background: #f4f4f4;
+    p
+    {
+        font-size: .9em;
+        line-height: 20px;
+
+        color: map-get($colorMaps,blue);
+    }
+    img
+    {
+        width: 100%;
+        height: auto;
+    }
+}
+.footer
+{
+    position: relative;
+
+    width: 100%;
+    height: 60px;
+
+    background: map-get($colorMaps,blue);
+    img
+    {
+        width: 25px;
+        height: 25px;
+        margin-top: 19px;
+    }
+    ul
+    {
+        li
+        {
+            float: left;
+            a
+            {
+                font-size: 16px;
+                line-height: 60px;
+
+                display: block;
+
+                color: #fff;
+            }
+            &:nth-child(even)
+            {
+                margin-right: 30px;
+            }
+        }
+    }
+    span
+    {
+        font-size: 16px;
+        line-height: 60px;
+
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        color: #fff;
     }
 }
 /* 课程页面 */
